# page

./: .eleventy.js  .gitignore  CHANGELOG.md  LICENSE  Main.hs  README.md  about.html  index.html  package-lock.json  page.cabal
.github/workflows/: ci.yml
_includes/: default.njk
templates/: default.html
